--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -30,9 +30,9 @@
         </table>
         <!-- 속성 오른쪽으로 주는 class="text-right" 부트스트랩 클래스 이용 -->
         <div class="text-right">
-          <button type="button" class="btn btn-primary">쓰기</button>
-        </div>
-      </div>
+          <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
+        </div> 
+      </div> 
     
     <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
