--- a/src/main/resources/static/starter-template.css
+++ b/src/main/resources/static/starter-template.css
@@ -1,7 +1,7 @@
 body {
-    padding-top: 50px;
-  }
-  .starter-template {
-    padding: 40px 15px;
-    text-align: center;
-  }
+  padding-top: 5rem;
+}
+.starter-template {
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
