--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -5,7 +5,7 @@
   </head> 
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" th:replace="fragments/common :: menu('form')">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('form')">
         
     </nav>
     
@@ -13,14 +13,28 @@
         <h2>게시판</h2>
 
         <form action="#" th:action="@{/board/form}" th:object="${board}" method="post">
+
+          <!-- 수정하는 경우도 있기 때문에 id를 통해서 해당 객체 다룰 수 있도록 전달함 -->
+          <input type="hidden" th:field="*{id}">
+
           <div class="form-group">
             <!-- for() = id()를 동일하게 하여 해당 레이블 클릭시 input으로 커서 이동됨 -->
             <label for="title" >제목</label> 
-            <input type="text" class="form-control" id="title" title="title" th:field="*{title}"/>
+            <!-- 에러가 있는경우 다른 css적용 (class="form-control is-invalid" ) -->
+            <input type="text" class="form-control" 
+              th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" id="title" title="title" th:field="*{title}"/>
+            <!-- 에러가 있는경우 에러 메시지 출력 -->
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+              제목 에러 메시지
+            </div>
           </div>
           <div class="form-group"> 
             <label for="content">내용</label> 
-            <input type="text" class="form-control" id="content" title="content" th:field="*{content}"/>
+            <input type="text" class="form-control" 
+              th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'" id="content" title="content" th:field="*{content}"/>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+              내용 에러 메시지
+            </div>
           </div>
           <div class="text-right">
             <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
