--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -14,6 +14,18 @@
         <!-- boards.getTotalElements() 메서드를 thymeleaf에서 호출 -->
         <!-- 'get'을 제거하여 boards.totalElements으로 호출 시 타임리프가 알아서 호출해준다.  -->
         <div>총 건수 : <span th:text="${boards.totalElements}"></span></div>
+        
+        <!-- 검색form -->
+        <!-- form 태그이므로 알아서 param 전달 -->
+        <form class="form-inline d-flex justify-content-end" method="GET" th:action="@{/board/list}">
+          <div class="form-group mx-sm-3 mb-2">
+            <label for="searchText" class="sr-only">검색</label>
+            <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}">
+          </div>
+          <!-- class btn-primary에서 btn-light으로 변경 -->
+          <button type="submit" class="btn btn-light mb-2">검색</button>
+        </form>
+
         <table class="table">
           <thead>
             <tr>
@@ -29,7 +41,7 @@
               <!-- 해당 td안에 있던 th:text가 <a>를 통해 묻힐 수 있기 때문에 <a>태그 안으로 넣고 -->
               <!-- th:href를 통해 해당 text 클릭시 해당 객체의 id파라미터를 전달하면서 url로 이동 -->
               <td ><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}">Hello World</a></td>
-              <td th:text="${board.content}">황영진</td>
+              <td >황영진</td>
             </tr>
           </tbody>
         </table>
@@ -38,7 +50,7 @@
           <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${1==boards.pageable.pageNumber + 1 } ? 'disabled'">
               <!-- boards.pageable.pageNumber-1의 해당하는 값으로 page번호 파라미터로 넘겨준다. -->
-              <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber-1})}" tabindex="-1" aria-disabled="true">Previous</a>
+              <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber-1}, searchText=${param.searchText})}" tabindex="-1" aria-disabled="true">Previous</a>
             </li>
             <!-- i는 startPage 부터 endPage 까지 증가하면서 index값을 받아 온다. -->
             <!-- boards.getPageable().getPageNumber() 메서드를 thymeleaf에서 호출 -->
@@ -47,10 +59,10 @@
                  (controller에서 1부터 보여주나 page는 0부터이므로 +1) -->
             <li class="page-item" th:classappend="${i==boards.pageable.pageNumber + 1 } ? 'disabled'" th:each="i: ${#numbers.sequence(startPage, endPage)}">
               <!-- 보여주는 버튼의 i값은 page+1 값이므로 page의 값을 넘겨주는 파라미터는 i-1 해주어야한다. -->
-              <a class="page-link" href="#" th:href="@{/board/list(page=${i-1})}" th:text="${i}" >1</a>
+              <a class="page-link" href="#" th:href="@{/board/list(page=${i-1},searchText=${param.searchText})}" th:text="${i}" >1</a>
             </li>
             <li class="page-item" th:classappend="${boards.totalPages==boards.pageable.pageNumber + 1 } ? 'disabled'">
-              <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber+1})}" >Next</a>
+              <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber+1}, searchText=${param.searchText})}" >Next</a>
             </li>
           </ul>
         </nav>
