--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -10,9 +10,9 @@
   </head>
 
   <body class ="text-center">
-    <form class="form-signin" th:action="@{/account/login}" method="post">
+    <form class="form-signin" th:action="@{/account/register}" method="post">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <h1 class="h3 mb-3 font-weight-normal">회원가입</h1>
       <div th:if="${param.error}" class="alert alert-danger" role="alert">
         Invalid username and password.
       </div>
@@ -28,7 +28,7 @@
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">회원가입</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
     </form>
 
