--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -11,7 +11,7 @@
 
   <body class ="text-center">
     <form class="form-signin" th:action="@{/account/register}" method="post">
-      <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <a th:href="@{/}"><img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
       <h1 class="h3 mb-3 font-weight-normal">회원가입</h1>
       <div th:if="${param.error}" class="alert alert-danger" role="alert">
         Invalid username and password.
